# Paz-Rav

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  ROADMAP.md  component-guide.he.html  interview-guide.he.html
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
scripts/: analytics_demo.py  backtest_demo.py  builder_demo.py  fetch_demo.py  make_fixture.py  pipeline_demo.py
src/paz_rav/: __init__.py  access_requests.py  access_requests_memory.py  auth.py  config.py  notify.py  pipeline.py  scheduler.py
src/paz_rav/adapters/: __init__.py  ibkr.py  market_data.py  yfinance_md.py
src/paz_rav/agents/: __init__.py  analyst.py  close_advisor.py  committee.py  critic.py  explainer.py  graph.py  open_advisor.py  reflection.py
src/paz_rav/analytics/: __init__.py  features.py  iv.py  regime.py  (+1 more)
tests/: conftest.py  test_analytics.py  test_api.py  test_auth.py  test_backtest.py  test_builder.py  test_bus.py  test_case_memory.py  test_close_advisor.py  test_committee.py  test_dacs.py  test_double_diagonal.py  test_explainer.py  test_graph.py  test_greeks.py  test_open_advisor.py  test_pipeline.py  test_positions.py  test_reflection.py  test_store.py  test_strategies.py
tests/fixtures/: sample_market.json
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  AuthGate.tsx  api.ts  auth.ts  firebaseConfig.ts  format.ts  index.css  lib.ts  main.tsx  theme-context.tsx  theme.ts  types.ts
(+62 files in other folders)
