[project]
name = "paz-rav"
version = "0.0.1"
description = "Real-time options strategy engine — deterministic core + two-agent judgment"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "redis>=5.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
    # Firebase ID-token *verification* only (not the full firebase-admin SDK — we never
    # issue tokens, just check the ones Google's own Sign-In flow already produced).
    "pyjwt[crypto]>=2.9",
]

[project.optional-dependencies]
# Heavy numeric stack — the quant core validates against these; the pure-Python
# fallbacks in paz_rav.quant let tests run with zero extra installs.
quant = ["numpy>=1.26", "scipy>=1.11", "py_vollib>=1.0.1", "polars>=0.20", "pyarrow>=15", "duckdb>=0.10"]
# Market-data feeds. yfinance = free/delayed (dev); ib_async = real-time via TWS (prod).
feeds = ["yfinance>=0.2.40", "ib_async>=1.0"]
# Phase 2 — the two-agent judgment layer (Analyst<->Critic loop + tracing).
agents = ["anthropic>=0.25", "langgraph>=0.2", "langfuse>=2.0"]  # optional: sequential fallback if absent
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.9", "fakeredis>=2.20"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paz_rav"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
